# pyoncvpsp

./: .pre-commit-config.yaml  pyproject.toml
src/pyoncvpsp/: utils.py
src/pyoncvpsp/cli/: _cli.py  _extract_upf.py  _out2json.py
src/pyoncvpsp/io/: _utils.py
src/pyoncvpsp/io/input/: _models.py
src/pyoncvpsp/io/output/: __init__.py  _data.py  _text.py
