[project]
name = "pyoncvpsp"
version = "0.1.0"
description = "Python utilities for the ONCVPSP code"
readme = "README.md"
authors = [
    { name = "Austin Zadoks" }
]
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.0",
    "numpy>=1.21,<3",
    "pydantic>=2.12.4",
    "pydantic-numpy",
    "toml>=0.10.2",
]

[project.scripts]
pyoncvpsp = "pyoncvpsp.cli:cli"

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pyrefly>=0.55.0",
    "ruff>=0.15.4",
]

[tool.pyrefly]
project-includes = [
    "**/*.py*",
    "**/*.ipynb",
]
